3/10/2014
- version 2.0.1
- extend iat window to 10 minutes (due to interop test results Google/Mitre...)
- don't write more than strlen for metadata files

3/10/2014
- version 2.0
- Debian packaging
- more complete documentation of configuration primitives
- iat checking with 60 seconds slack and iat-based nonce caching
- support for HMAC verification (HS256, HS384, HS512)

3/9/2014
- improve javascript for implicit post
- always check the signature on the id_token now, Basic or Implicit
- factor out reading files in oidc_util 
- revert adding /0 at end of file
- add option to specify id_token_signed_response_alg during dynamic client registration
- check return value on oidc_base64url_decode_decrypt_string for state and session cookie
- allow token_endpoint and jwks_uri not to be set in OP metadata (for self-issued support)

3/6/2014
- add/fix termination of subrequest processing after sending javascript for implicit client profile
- support configuring/overriding the token_endpoint authentication method in client metadata
- improve HTTP call result checking for downloading Google JWKs
- minor documentation updates
- allow .client metadata to override global SSL validation setting for JWK downloads too
- cleanup resources used in Google JWK conversion
- minor variable initialization improvements (to silence valgrind)
- code re-formatting

2/28/2014
- add implicit client support
- support passing long/float values in app headers

2/26/2014
- add configurable timestamp check in state

2/19/2014
- correct OP metadata validation: userinfo_endpoint is optional, not mandatory

2/18/2014
- add configurable cookie-only-based (zero server state) session mode

2/12/2014
- minor correction in documentation on config primitives
- move config checks from request handler to post_config hook (and fix oauth config check at the same time)

1/27/2014
- require TLS for AS/OP endpoints

1/23/2014
- adhere to more strict JSON compliancy in what we send