@@ -68,7 +68,8 @@ OIDCCacheDir /var/cache/apache2/mod_oidc/cache
 
 # (Optional)
 # The contacts that the client registers in dynamic registration with the OP.
-# Single value only; when not defined, no contact will be sent with the registration request.
+# Must be formatted as e-mail addresses by specification.
+# Single value only; when not defined, no contact e-mail address will be sent with the registration request.
 #OIDCClientContact <contact>
 
 # (Optional)
